--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
  <!-- MAIN CONTENT -->
      <div id="main_content_wrap" class="outer">
        <section id="main_content" class="inner">
-        teste
+        Em construção.
        </section>
      </div>
     
